modules/gdscript/tests/scripts/parser/errors/bad_f_string_1.gd
func test():
    print(f"fstring closing quote doesn't match')
